product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/using_hybrid_manager/managing_users/native_users/disable_native_user.mdx
---
title: Disabling native user login
navTitle: Disabling native users
description: After configuring an external IdP, disable native user login.
---

Before disabling native user login, confirm that at least one other IdP user has the organization owner role. Assign a new organization owner if you haven't done that yet.

## Assign a new organization owner

1.  Log in at least once to the Hybrid Manager (HM) console as the IdP user that will become the organization owner. This ensures the HM console indexes the new user. Then, log out.

1.  Log in as the current native owner of HM (for example, `owner@mycompany.com`).

3.  From the top-right profile menu, select **User management**. Verify the user that will become the new owner is in the list.   

1.  Edit the user and assign them the owner role.

## Disable native users

1.  To disable native user login, unset the `staticPasswords` configuration by setting `portal.authentication.staticPasswords` to `[]`:

    ```
    portal:
      authentication:
        staticPasswords: []
    ```
1.  [Apply the DEX configuration](/edb-postgres-ai/latest/hybrid-manager/using_hybrid_manager/managing_users/apply_dex_config/) again to populate the changes.

